--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 jdk:
   - oraclejdk8
 
+before_install:
+   - chmod +x gradlew
+
 before_script:
   - npm install -g grunt-cli
   - npm install -g bower
