--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // Required for Kotlin integration
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect"
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-jetty'
     compile 'org.springframework.boot:spring-boot-starter-actuator'
@@ -45,3 +46,9 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '1.2.1.RELEASE', ext: 'pom'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+task runApplication(dependsOn: [
+        clean,
+        build,
+        bootRun
+])
