--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.h2database:h2'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '1.2.1.RELEASE', ext: 'pom'
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
 }
 
 task runApplication(dependsOn: [
